--- a/excel.html
+++ b/excel.html
@@ -10,6 +10,7 @@
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
     <body>
+        <p>version: 1</p>
         <input type="file" id="excelFileInput">
         <div id="output"></div>
 
